deploy: 9790825f2978634ad0b9e3c263b829b724cf3de5

--- a/404.html
+++ b/404.html
@@ -5,4 +5,4 @@
 <a href=/blog>Blog</a>
 <a href=/crosswords/>Crosswords</a>
 <a href=/work/>Work</a></nav></header><main><h1>404</h1><center><a href=/><img src=/assets/images/milk.png alt="A cartoon of a milk carton with 'Have You Seen Me? 404 Error' printed on one side."></a></center></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br></footer></body></html>
+<input type=submit value=Subscribe></form></footer></body></html>
