--- a/link-bulletin-2022-04/index.html
+++ b/link-bulletin-2022-04/index.html
@@ -17,4 +17,4 @@ Corporation</em></a></li><li><a href=https://github.com/simonw/shot-scraper><cod
 websites</a></li><li><a href=https://palewi.re/docs/news-homepages/><code>news-homepages</code>: a bot that gathers, archives and shares screenshots of
 news homepages</a></li><li><a href=https://crosshare.org/>Crosshare: a free, ad-free, and open-source place to create, share and solve
 crossword puzzles</a></li></ul></content><p><a href=https://www.georgeho.org/blog/link-bulletin/>#link-bulletin</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br></footer></body></html>
+<input type=submit value=Subscribe></form></footer></body></html>
