--- a/bayesian-inference-reading/index.html
+++ b/bayesian-inference-reading/index.html
@@ -90,4 +90,4 @@ here.</a>&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;
 cookbook</a> or <a href=https://betanalpha.github.io/assets/case_studies/principled_bayesian_workflow.html>Michael
 Betancourt’s excellent essay on a principles Bayesian
 workflow</a>.&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br></footer></body></html>
+<input type=submit value=Subscribe></form></footer></body></html>
