--- a/deep-autoregressive-models/index.html
+++ b/deep-autoregressive-models/index.html
@@ -143,4 +143,4 @@ your phone keyboard&rsquo;s word suggestions (those are autoregressive!) spittin
 out an entire novel. Or imagine weaving a sweater but you had to choose the
 color of every stitch, in order, in advance.&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:3><p>In case you haven&rsquo;t noticed, Google DeepMind seemed to have had an
 infatuation with autoregressive models back in 2016.&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/deep-learning/>#deep-learning</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br></footer></body></html>
+<input type=submit value=Subscribe></form></footer></body></html>
