--- a/joining-flatiron/index.html
+++ b/joining-flatiron/index.html
@@ -20,4 +20,4 @@ in New York.</p><p><img src=/assets/images/flatiron-logo.png alt="Flatiron Healt
 accelerate oncology research and improve quality of cancer care through data
 analytics.</p><p>The past two years have been terrific, but needless to say, I&rsquo;m looking forward
 to adventures ahead! ⛵</p></content><p><a href=https://www.georgeho.org/blog/life-update/>#life-update</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br></footer></body></html>
+<input type=submit value=Subscribe></form></footer></body></html>
