--- a/joining-point72/index.html
+++ b/joining-point72/index.html
@@ -24,4 +24,4 @@ Yards</a> offices.</p><center><img src=/assets/images/point72-logo.png alt="Poin
 <a href=https://github.com/pymc-devs/pymc4>PyMC4</a>. These are exciting times for the
 PyMC project: I hope to keep contributing!</li></ol><p>My four years of college were incredibly rewarding, but I&rsquo;m excited to enter the
 real world. Stay tuned!</p></content><p><a href=https://www.georgeho.org/blog/life-update/>#life-update</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br></footer></body></html>
+<input type=submit value=Subscribe></form></footer></body></html>
