--- a/migrating-to-hugo/index.html
+++ b/migrating-to-hugo/index.html
@@ -53,4 +53,4 @@ resulting blog posts looked <em>damn good</em>), but I couldn&rsquo;t justify ma
 own language specifically for writing blog posts. I&rsquo;d probably recommend using
 Pollen for large, one-off pieces of writing (like a book), instead of small,
 recurring pieces of writing (like a blog).</p></content><p><a href=https://www.georgeho.org/blog/typography/>#typography</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br></footer></body></html>
+<input type=submit value=Subscribe></form></footer></body></html>
