--- a/pyfolio/index.html
+++ b/pyfolio/index.html
@@ -174,4 +174,4 @@ risk model works! Read all about it
 Robinhood.</a>
 Sorry for all the broken links to <code>www.quantopian.com</code>.</p></content><p><a href=https://www.georgeho.org/blog/open-source/>#open-source</a>
 <a href=https://www.georgeho.org/blog/quant-finance/>#quant-finance</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br></footer></body></html>
+<input type=submit value=Subscribe></form></footer></body></html>
