deploy: 75bc4b3ba16c2da194f493e702281784f8c438c4

--- a/hello/index.html
+++ b/hello/index.html
@@ -22,5 +22,5 @@ Pages</a> and served using
 blogging stack: the only thing I pay for is the custom
 <a href=https://eigenfoo.xyz/><code>eigenfoo.xyz</code></a> domain name, which costs the same as
 maybe two or three cups of coffee a year.</p><hr><p><strong>Update (2022-03-06):</strong> I&rsquo;ve since made several changes to this blog, which
-you can read about in <a href=/migrating-to-hugo>a subsequent blog post</a>.</p></content><p></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit="window.open('https://buttondown.email/eigenfoo','popupwindow')" class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+you can read about in <a href=/migrating-to-hugo>a subsequent blog post</a>.</p></content><p></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
