--- a/understanding-nuts-hmc/index.html
+++ b/understanding-nuts-hmc/index.html
@@ -33,5 +33,5 @@ of NUTS in Python, written for pedagogy rather than actual sampling. For a
 of PyMC3’s NUTS/HMC samplers.</p><p>Finally, for anyone who wants to read around computational methods for Bayesian
 inference more generally (i.e. not restricted to HMC, for example), I&rsquo;d
 (unashamedly) point to <a href=https://www.georgeho.org/bayesian-inference-reading/>my blog post on
-this</a>.</p></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit="window.open('https://buttondown.email/eigenfoo','popupwindow')" class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+this</a>.</p></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
