--- a/crosswords/010/index.html
+++ b/crosswords/010/index.html
@@ -23,14 +23,15 @@ The Rackenfracker&rsquo;s test solvers Andy Stilp and John, and the Crossweird c
 of <code>hagabaka</code>, Kate Chin Park, Kelsey Dixon, <code>meat</code>, and Will Eisenberg.</p><p>Here now, a word from The Rackenfracker:</p><blockquote><p>I feel bad about making anyone read it once, George. I wouldn&rsquo;t double-dip&mldr;
 no matter how runny the yolk.</p></blockquote><p>Oh, they&rsquo;re talking about the 20-odd egg puns they&rsquo;ve put up in their own blog
 post! While they readily admit that <em>&ldquo;you know, concision isn&rsquo;t [their]
-watchword&rdquo;,</em> their blog is nevertheless <a href=https://www.therackenfracker.com/>a cornucopia of cogent cryptic
-correspondence</a> &mdash; give it a read!</p><p>Without further ado &mdash; I hope you enjoy!</p><blockquote><p><strong>Instructions:</strong> In this puzzle’s grid, we found 10 eggs, which was very
+watchword&rdquo;,</em> their blog is nevertheless <a href=https://www.therackenfracker.com/2022/07/19/rackenfracker-8-in-one-basket/>a cornucopia of cogent cryptic
+correspondence</a>
+&mdash; give it a read!</p><p>Without further ado &mdash; I hope you enjoy!</p><blockquote><p><strong>Instructions:</strong> In this puzzle’s grid, we found 10 eggs, which was very
 fortunate since we did not find any clue numbers. The only help we have in
 arranging these answers (presented alphabetically, sorted by across and down)
 is that the letter O, when it appears in clue answers, is placed in a square
 with an egg.</p></blockquote><p><a href=https://squares.io/info/9ry3bdsbqbvun6kdy5yd>web</a>
-/ <a href=/crosswords/In_One_Basket_Squares.ipuz>ipuz (Squares)</a>
-/ <a href=/crosswords/In_One_Basket_Puzzazz.ipuz>ipuz (Puzzazz)</a>
+/ <a href=/crosswords/In_One_Basket_Squares.ipuz download>ipuz (Squares)</a>
+/ <a href=/crosswords/In_One_Basket_Puzzazz.ipuz download>ipuz (Puzzazz)</a>
 / <a href=/crosswords/In_One_Basket.pdf>pdf</a>
 / <a href=/crosswords/In_One_Basket_Solution.pdf>solutions and annotations</a></p><iframe src="https://squares.io/solve/9ry3bdsbqbvun6kdy5yd?embed=1" width=800 height=505></iframe></content><p></p></main><footer><div id=revue-embed style="border:1px solid #e6e6e6;padding:30px;text-align:center"><form action=https://www.getrevue.co/profile/loplop/add_subscriber method=post id=revue-form name=revue-form target=_blank><div class=revue-form-group><label for=member_email>Get my puzzles over email:</label>
 <input class=revue-form-field placeholder=hello@example.com type=email name=member[email] id=member_email></div><div class=revue-form-actions><input type=submit value=Subscribe name=member[subscribe] id=member_submit></div><div class=revue-form-footer><div style=font-size:65%;opacity:.7>By subscribing, you agree with Revue’s <a target=_blank href=https://www.getrevue.co/terms>Terms of Service</a> and <a target=_blank href=https://www.getrevue.co/privacy>Privacy Policy</a>.</div></div></form></div></footer></body></html>
