--- a/crosswords-datasets-dictionaries/index.html
+++ b/crosswords-datasets-dictionaries/index.html
@@ -46,7 +46,7 @@ Dictionary</a> looks up word
 pronunciations, splitting words up into phonemes. This may seem silly
 <em>(&ldquo;can&rsquo;t you just Google to learn the pronounciation of words?&rdquo;),</em> but with a
 bit of work, this dataset lets you look up homophones and Spoonerisms, as
-some crossword construction software &mdash; such as <a href=exet.app>Exet</a> &mdash; do!</li><li><a href=https://rhymezone.com/>RhymeZone</a> and its Spanish cousin,
+some crossword construction software &mdash; such as <a href=https://exet.app>Exet</a> &mdash; do!</li><li><a href=https://rhymezone.com/>RhymeZone</a> and its Spanish cousin,
 <a href=https://rimar.io/>Rimar.io</a> lets you look up homophones, rhymes or near
 rhymes (it actually makes use CMU Pronouncing Dictionary, among other
 datasets!)</li><li><a href=https://onelook.com/spruce/>Spruce</a> looks up &ldquo;inspiring sentences&rdquo; &mdash;
