deploy: 5e37316ab307808a47242636adabcc6013893f40

--- a/crosswords-datasets-dictionaries/index.html
+++ b/crosswords-datasets-dictionaries/index.html
@@ -48,7 +48,7 @@ pronunciations, splitting words up into phonemes. This may seem silly
 bit of work, this dataset lets you look up homophones and Spoonerisms, as
 some crossword construction software &mdash; such as <a href=https://exet.app>Exet</a> &mdash; do!</li><li><a href=https://rhymezone.com/>RhymeZone</a> and its Spanish cousin,
 <a href=https://rimar.io/>Rimar.io</a> lets you look up homophones, rhymes or near
-rhymes (it actually makes use CMU Pronouncing Dictionary, among other
+rhymes (it actually uses the CMU Pronouncing Dictionary, among other
 datasets!)</li><li><a href=https://onelook.com/spruce/>Spruce</a> looks up &ldquo;inspiring sentences&rdquo; &mdash;
 quotes, lyrics, proverbs and jokes, which are indexed from
 <a href=https://en.wikiquote.org/wiki/Main_Page>WikiQuote</a> and <a href=https://commoncrawl.org/>Common
