deploy: bf6d4cd8ac1277e17088fb1868fdfee54910f911

--- a/crosswords/015/index.html
+++ b/crosswords/015/index.html
@@ -12,7 +12,7 @@ to see! If you want to check one out, it&rsquo;s been solved by a real who&rsquo
 cryptic streamers:</p><ul><li><a href=https://www.twitch.tv/videos/1600145075>Crossweird</a></li><li><a href=https://www.twitch.tv/danandbabka/video/1601153221>Dan and Babka</a></li><li><a href=https://www.twitch.tv/videos/1602491781><code>joeadultman</code></a></li><li><a href=https://www.twitch.tv/juffo__wup/video/1596469647>Juff</a></li><li><a href=https://www.twitch.tv/liari77/video/1594626247>Liari</a></li><li><a href=https://www.twitch.tv/videos/1595904624><code>thatcrypticguy</code></a></li></ul><p>As always, a huge thank you to <a href=https://twitter.com/kitsovereign>Kit
 Sovereign</a> and Michael Colella for the test
 solves &mdash; and without further ado, I hope you enjoy!</p><h2 id=clue-workshop>Clue Workshop</h2><p>Today I&rsquo;ll discuss a clue from <a href=https://www.georgeho.org/crosswords/010/><em>In One
-Basket</em></a>, my variety collaboration
+Basket,</em></a> my variety collaboration
 with <a href=https://www.therackenfracker.com/>The Rackenfracker</a>. If you haven&rsquo;t
 solved that yet, please do give it a go &mdash; I think it&rsquo;s the puzzle that I&rsquo;m
 proudest of so far!</p><p style=text-align:center>In the ’90s, Bush hit Gore initially and sincerely —<br>lacking leadership, in need of reform (9)</p><details><summary>Click here for solution and discussion</summary><ul><li><strong>Answer:</strong> GLYCERINE</li><li><strong>Definition:</strong> In the ’90s, Bush hit</li><li><strong>Wordplay:</strong> G[ore] + ([s]INCERELY)*</li></ul><p>One thing which I didn&rsquo;t like about this clue was that the definition required
