deploy: 0a04b38814459951b207105ba404c5983219ec3e

--- a/crosswords/015/index.html
+++ b/crosswords/015/index.html
@@ -15,7 +15,7 @@ solves &mdash; and without further ado, I hope you enjoy!</p><h2 id=clue-worksho
 Basket,</em></a> my variety collaboration
 with <a href=https://www.therackenfracker.com/>The Rackenfracker</a>. If you haven&rsquo;t
 solved that yet, please do give it a go &mdash; I think it&rsquo;s the puzzle that I&rsquo;m
-proudest of so far!</p><p style=text-align:center>In the ’90s, Bush hit Gore initially and sincerely —<br>lacking leadership, in need of reform (9)</p><details><summary>Click here for solution and discussion</summary><ul><li><strong>Answer:</strong> GLYCERINE</li><li><strong>Definition:</strong> In the ’90s, Bush hit</li><li><strong>Wordplay:</strong> G[ore] + ([s]INCERELY)*</li></ul><p>One thing which I didn&rsquo;t like about this clue was that the definition required
+proudest of so far!</p><p style=text-align:center>In the ’90s, Bush hit Gore initially and sincerely — lacking leadership, in need of reform (9)</p><details><summary>Click here for solution and discussion</summary><ul><li><strong>Answer:</strong> GLYCERINE</li><li><strong>Definition:</strong> In the ’90s, Bush hit</li><li><strong>Wordplay:</strong> G[ore] + ([s]INCERELY)*</li></ul><p>One thing which I didn&rsquo;t like about this clue was that the definition required
 you to know the <a href="https://www.youtube.com/watch?v=hOllF3TgAsM">1994 song by
 Bush</a>.</p><p>While I don&rsquo;t mind requiring solvers to know facts about the world, I try to
 avoid pop culture and celebrity names: not because they don&rsquo;t deserve to be in
