deploy: f25d377c8a6cc883d63721e42bb643b4f392539b

--- a/bayesian-modelling-cookbook/index.html
+++ b/bayesian-modelling-cookbook/index.html
@@ -40,7 +40,7 @@ incredibly complicated. Nevertheless, I think it&rsquo;s important to get at lea
 hand-wavy understanding of what these methods are. If you&rsquo;re new to all this,
 my personal recommendation is to invest your time in learning MCMC: it&rsquo;s been
 around longer, we know that there are sufficiently robust tools to help you,
-and there&rsquo;s a lot more support/documentation out there.</p></li></ul><h3 id=markov-chain-monte-carlo>Markov-chain Monte Carlo</h3><ul><li><p>For a good high-level introduction to MCMC, I liked <a href="https://www.youtube.com/watch?v=DJ0c7Bm5Djk&feature=youtu.be&t=4h40m9s">Michael Betancourt&rsquo;s
+and there&rsquo;s a lot more support/documentation out there.</p></li></ul><h3 id=markov-chain-monte-carlo>Markov-chain Monte Carlo</h3><ul><li><p>For a good high-level introduction to MCMC, I liked <a href="https://www.youtube.com/watch?v=DJ0c7Bm5Djk&amp;feature=youtu.be&amp;t=4h40m9s">Michael Betancourt&rsquo;s
 StanCon 2017
 talk</a>:
 especially the first few minutes where he provides a motivation for MCMC, that
