--- a/crosswords-datasets-dictionaries/index.html
+++ b/crosswords-datasets-dictionaries/index.html
@@ -36,7 +36,7 @@ finds sets of three five-letter words that are all one letter apart, such as
 <code>beats, boats, brats</code> &mdash; useful for finding crossing words!).</p><h2 id=augmented-dictionaries>Augmented Dictionaries</h2><p>Many tools supplement dictionaries with other data, such as etymology,
 pronunciation or sets of related words. You might think that your favorite
 dictionary would already give you all of those things, but the strength here is
-in the ability to easily write very sophisticated queries, such as <a href="https://api.datamuse.com/words?rel_com=car&sp=t*"><em>&ldquo;what
+in the ability to easily write very sophisticated queries, such as <a href="https://api.datamuse.com/words?rel_com=car&amp;sp=t*"><em>&ldquo;what
 comprises a car that starts with the letter
 T?&rdquo;</em></a>, to give you phrases
 like <code>trunk, throttle, tailfin, third gear</code>.</p><ul><li>The <a href=https://www.etymonline.com/>Online Etymology Dictionary</a> looks up word
