--- a/lda/index.html
+++ b/lda/index.html
@@ -126,7 +126,7 @@ out <a href=https://www.semanticscholar.org/paper/A-well-conditioned-estimator-f
 Wolf</a>.
 Their original motivation was in financial portfolio optimization, so they&rsquo;ve
 also authored several other papers
-(<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=433840&rec=1&srcabs=290916&alg=7&pos=6">here</a>
+(<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=433840&amp;rec=1&amp;srcabs=290916&amp;alg=7&amp;pos=6">here</a>
 and
 <a href=https://www.semanticscholar.org/paper/A-well-conditioned-estimator-for-large-dimensional-Ledoit-Wolf/23d8219db1aff006b41007effc696fca6fbcabcf>here</a>)
 that go into the more financial details. That needn&rsquo;t concern us though:
