deploy: 207eb827a2fb00a835c1541beae4d3bbb29a2e1c

--- a/recipes/raspberry-basil-mousse/index.html
+++ b/recipes/raspberry-basil-mousse/index.html
@@ -21,7 +21,7 @@ raspberry juice and sugar and stir until the sugar is dissolved.
 Refridgerate the raspberry mixture until it begins to firm up, about 1 hour.
 Meanwhile, whip the the basil-infused cream to soft peaks.</li><li>Fold the whipped cream into the raspberry mixture. Pour into serving
 container(s) if desired. Chill until set, at least 2 hours for individual
-servings and 4 hours for larger dishes. Serve directly from the dish.</li></ol><ul><li><strong>Yield:</strong> 8-10 servings.</li><li><strong>Time:</strong> 12 hour infusion; 1 hour preparation; 1 hour cook; 2–4 hour set.</li></ul><h2 id=cooking-notes>Cooking Notes</h2><ul><li>Too-strong basil-infused cream can be diluted with more cream; too-weak can
+servings and 4 hours for larger dishes. Serve directly from the dish.</li></ol><ul><li><strong>Yield:</strong> 8–10 servings.</li><li><strong>Time:</strong> 12 hour infusion; 1 hour preparation; 1 hour cook; 2–4 hour set.</li></ul><h2 id=cooking-notes>Cooking Notes</h2><ul><li>Too-strong basil-infused cream can be diluted with more cream; too-weak can
 be strengthened by changing the basil and continuing infusion. Do not
 strengthen by <em>only</em> extending the infusion time, as that will overextract
 the basil and result in unpleasant flavors: instead, strain and remove the
