deploy: 6134c8f9cfa52e5b1290aba219dba00163045ef8

--- a/crosswords/014/index.html
+++ b/crosswords/014/index.html
@@ -13,6 +13,6 @@ and gracious editor.</p><p>For those who don&rsquo;t know, lemonade disco is a m
 new constructors and constructors from underrepresented backgrounds a platform
 to showcase their work. Check it out &mdash; my puzzle is in the company of some
 delightful non-cryptic crosswords as well, and it&rsquo;s also the only way to solve
-my latest puzzle.</p><p>Without further ado, I hope you enjoy!</p><p><a href=https://www.taylormadecrosswords.com/suites/blog-post-title-one-d6lj7>web (lemonade disco)</a></p></content><p></p></main><footer><div id=buttondown-embed style="border:1px solid #e6e6e6;padding:30px;text-align:center"><form action=https://buttondown.email/api/emails/embed-subscribe/loplop method=post target=popupwindow onsubmit='window.open("https://buttondown.email/loplop","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my crosswords over email:</label>
+my latest puzzle.</p><p>Without further ado, I hope you enjoy!</p><p><a href=https://lemonadedisco.com/puzzle-suites/blog-post-title-one-d6lj7>web (lemonade disco)</a></p></content><p></p></main><footer><div id=buttondown-embed style="border:1px solid #e6e6e6;padding:30px;text-align:center"><form action=https://buttondown.email/api/emails/embed-subscribe/loplop method=post target=popupwindow onsubmit='window.open("https://buttondown.email/loplop","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my crosswords over email:</label>
 <input type=email name=email id=bd-email>
 <input type=submit value=Subscribe></form></div></footer></body></html>
