deploy: 6c588b5c3ce3d2f3f080cd4d51644991d71e354d

--- a/recipes/thai-tea-panna-cotta/index.html
+++ b/recipes/thai-tea-panna-cotta/index.html
@@ -29,6 +29,6 @@ Adjust sugar and lime juice to taste.</li><li>Strain the mixture through a fine-
 at least 4 hours.</li></ol><ul><li><strong>Yield:</strong> ~6 servings</li><li><strong>Time:</strong> 30 minutes preparation; 30 minutes cooking; overnight refrigeration.</li></ul><h2 id=cooking-notes>Cooking Notes</h2><ul><li>Under no circumstances let the cream mixture boil: this will lead to a grainy
 or curdled texture or separation of ingredients (like fats and liquids).</li><li>Transferring the cream mixture from a saucepan to a pouring container is
 irksome and adds to the dishes, but it makes dividing the mixture <em>much</em>
-simpler and cleaner.</li><li>If you plan to unmold the panna cotta before serving, make sure too lightly
+simpler and cleaner.</li><li>If you plan to unmold the panna cotta before serving, make sure to lightly
 brush the ramekins with neutral oil, wiping away any excess with a paper
 towel.</li></ul></content><p></p></main><footer></footer></body></html>
