deploy: 478a8745f466f5717fbc33165cea0e13117c4a0e

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <a href=/work/>Work</a></nav></header><main><h1 id=hello-im-george>Hello! I’m George</h1><div style=text-align:center><a href=/assets/images/profile-pic.jpg><img width=50% height=auto src=/assets/images/profile-pic.jpg alt="A photo of George in front of the Great Gum Wall of Seattle."></a></div><p>&mldr;but on the internet, I also go by <code>eigenfoo</code> (for data, software and other
 technical stuff) and <code>loplop</code> (for crosswords and other games).</p><p>I work at <a href=https://flatiron.com/>Flatiron Health</a>, where I use machine
 learning on real-world patient data to accelerate cancer research. I like
-natural language processing, Bayesian modelling, open source software,
-crosswords, donuts and coffee. (I construct cryptic crosswords, which you can
-check out <a href=/crosswords/>here</a>).</p><p>I&rsquo;m originally from Hong Kong but now based in New York. Previously, I worked for
+natural language processing, Bayesian modelling, crosswords and food. (I
+construct cryptic crosswords <a href=/crosswords/>here</a>, and write down my recipes
+<a href=/recipes/>here</a>).</p><p>I&rsquo;m originally from Hong Kong but now based in New York. Previously, I worked for
 <a href=https://www.point72.com>Point72 Asset Management</a> and
 <a href=https://en.wikipedia.org/wiki/Quantopian>Quantopian</a>, and I studied
 engineering at <a href=http://cooper.edu/welcome>The Cooper Union</a>.</p><ul><li><a href=mailto:hello%5B%C3%A6%5Dgeorgeho.org>Email</a></li><li><a href=https://twitter.com/_eigenfoo/>Twitter</a></li><li><a rel=me href=https://bright.rosy-colored.space/@george>Mastodon</a></li><li><a href=https://github.com/eigenfoo/>GitHub</a></li><li><a href=https://www.linkedin.com/in/eigenfoo/>LinkedIn</a></li><li><a href=/assets/resume.pdf>Résumé</a></li><li><a href=/feed.xml>RSS Feed</a></li></ul></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
