--- a/hanukkah-of-data-2022/index.html
+++ b/hanukkah-of-data-2022/index.html
@@ -94,6 +94,7 @@ the previous one, there is always something new. Sometimes it&rsquo;s structural
 and sometimes it&rsquo;s technical (it&rsquo;s surprisingly difficult in most tools to
 filter based on a date range that doesn&rsquo;t include the year).</p></blockquote><p>It&rsquo;s a really good observation &mdash; I suppose I shouldn&rsquo;t be surprised that
 Saul&rsquo;s thought about the puzzle design a lot more than I have! 😅</p></li><li><p>The text art is just stunning! Each solved puzzle reveals a new animal, until
-the whole tapestry is illuminated:</p><p><a href=/assets/images/hanukkah-of-data.png><img src=/assets/images/hanukkah-of-data.png alt="The whole tapestry for Hanukkah of Data2022"></a></p></li></ul></content><p><a href=https://www.georgeho.org/blog/data/>#data</a>
+the whole tapestry is illuminated:</p><p><a href=/assets/images/hanukkah-of-data.png><img src=/assets/images/hanukkah-of-data.png alt="The whole tapestry for Hanukkah of Data
+2022"></a></p></li></ul></content><p><a href=https://www.georgeho.org/blog/data/>#data</a>
 <a href=https://www.georgeho.org/blog/visidata/>#visidata</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
