deploy: b24820d6def8b28a45c05016056a6e81bcba5e17

--- a/crosswords-datasets-dictionaries/index.html
+++ b/crosswords-datasets-dictionaries/index.html
@@ -102,7 +102,7 @@ accessible to download.</li><li>The <a href=https://www.cruciverb.com/data.php>C
 dataset of American-style crossword and clues, but unfortunately requires a
 membership to access.</li><li>Finally, to plug my own dataset,
 <a href=https://cryptics.georgeho.org/><code>cryptics.georgeho.org</code></a> is a dataset of
-cryptic clues, with auxiliary datasets of cryptic indicators and charades.</li></ul></content><p><a href=https://www.georgeho.org/blog/crossword/>#crossword</a>
-<a href=https://www.georgeho.org/blog/dataset/>#dataset</a>
-<a href=https://www.georgeho.org/blog/natural-language-processing/>#natural-language-processing</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+cryptic clues, with auxiliary datasets of cryptic indicators and charades.</li></ul></content><p><a href=https://www.georgeho.org/blog/crossword/>#Crossword</a>
+<a href=https://www.georgeho.org/blog/dataset/>#Dataset</a>
+<a href=https://www.georgeho.org/blog/natural-language-processing/>#Natural-Language-Processing</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
