--- a/pyfolio/index.html
+++ b/pyfolio/index.html
@@ -172,6 +172,6 @@ stacks up against expectations. Check out the announcement
 risk model works! Read all about it
 <a href=https://www.quantopian.com/papers/risk>here</a>.</p><p><strong>Update (12-16-2020):</strong> <a href=https://www.bloomberg.com/news/articles/2020-12-16/quant-trading-platform-quantopian-closes-down>Quantopian has been acquired by
 Robinhood.</a>
-Sorry for all the broken links to <code>www.quantopian.com</code>.</p></content><p><a href=https://www.georgeho.org/blog/open-source/>#open-source</a>
-<a href=https://www.georgeho.org/blog/quant-finance/>#quant-finance</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+Sorry for all the broken links to <code>www.quantopian.com</code>.</p></content><p><a href=https://www.georgeho.org/blog/open-source/>#Open-Source</a>
+<a href=https://www.georgeho.org/blog/quant-finance/>#Quant-Finance</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
