--- a/bayesian-bandits-2/index.html
+++ b/bayesian-bandits-2/index.html
@@ -106,7 +106,7 @@ MathJax</a>?
 Technology frightens me sometimes.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:2><p>This explanation is largely drawn from <a href="http://hunch.net/?p=298">from John Langford&rsquo;s
 <code>hunch.net</code></a>.&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:3><p>If you don&rsquo;t want to do Bishop&rsquo;s exercises, there&rsquo;s a partially complete
 solutions manual <a href=https://github.com/GoldenCheese/PRML-Solution-Manual/>on
-GitHub</a> 😉&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a>
-<a href=https://www.georgeho.org/blog/reinforcement-learning/>#reinforcement-learning</a>
-<a href=https://www.georgeho.org/blog/machine-learning/>#machine-learning</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+GitHub</a> 😉&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/bayes/>#Bayes</a>
+<a href=https://www.georgeho.org/blog/reinforcement-learning/>#Reinforcement-Learning</a>
+<a href=https://www.georgeho.org/blog/machine-learning/>#Machine-Learning</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
