--- a/littlemcmc/index.html
+++ b/littlemcmc/index.html
@@ -23,9 +23,9 @@ written your own functions to compute the log probability and its gradients
 (perhaps for performance or interoperability reasons), and need a good MCMC
 sampler, then <code>littlemcmc</code> is for you! As long as you can call your functions
 from Python, you can use the same HMC or NUTS sampler that&rsquo;s used by the rest of
-the PyMC3 community.</p><p>So without further ado: please check out <code>littlemcmc</code>!</p><ul><li><a href=https://github.com/eigenfoo/littlemcmc>GitHub</a></li><li><a href=https://littlemcmc.readthedocs.io/en/latest/>Read the Docs</a></li></ul></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a>
-<a href=https://www.georgeho.org/blog/open-source/>#open-source</a>
-<a href=https://www.georgeho.org/blog/probabilistic-programming/>#probabilistic-programming</a>
-<a href=https://www.georgeho.org/blog/pymc/>#pymc</a>
-<a href=https://www.georgeho.org/blog/python/>#python</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+the PyMC3 community.</p><p>So without further ado: please check out <code>littlemcmc</code>!</p><ul><li><a href=https://github.com/eigenfoo/littlemcmc>GitHub</a></li><li><a href=https://littlemcmc.readthedocs.io/en/latest/>Read the Docs</a></li></ul></content><p><a href=https://www.georgeho.org/blog/bayes/>#Bayes</a>
+<a href=https://www.georgeho.org/blog/open-source/>#Open-Source</a>
+<a href=https://www.georgeho.org/blog/probabilistic-programming/>#Probabilistic-Programming</a>
+<a href=https://www.georgeho.org/blog/pymc/>#Pymc</a>
+<a href=https://www.georgeho.org/blog/python/>#Python</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
