--- a/lupi/index.html
+++ b/lupi/index.html
@@ -134,6 +134,6 @@ subset of the training examples</li><li><em>multiple-space privileged informatio
 can supply do not all share the same features</li></ol><p>Clearly, there&rsquo;s a lot of potential in the LUPI paradigm, as well as a lot of
 reasons to be skeptical. It&rsquo;s very much a nascent perspective of machine
 learning, so I&rsquo;m interested in keeping an eye on it going forward. I&rsquo;m hoping
-to write more posts on LUPI in the future!</p></content><p><a href=https://www.georgeho.org/blog/mathematics/>#mathematics</a>
-<a href=https://www.georgeho.org/blog/machine-learning/>#machine-learning</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+to write more posts on LUPI in the future!</p></content><p><a href=https://www.georgeho.org/blog/mathematics/>#Mathematics</a>
+<a href=https://www.georgeho.org/blog/machine-learning/>#Machine-Learning</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
