--- a/prob-prog-frameworks/index.html
+++ b/prob-prog-frameworks/index.html
@@ -177,7 +177,7 @@ derivative information requires computing the log determinant of the Jacobian
 of the transformation, commonly abbreviated to <code>log_det_jac</code> or something
 similar.&#160;<a href=#fnref:4 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:5><p>As an aside, I&rsquo;ll say that it&rsquo;s mind boggling how Stan does this. To
 quote a (nameless) PyMC core developer:</p><blockquote><p>I think that maintaining your own autodifferentiation library is the
-path of a crazy person.</p></blockquote>&#160;<a href=#fnref:5 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></li></ol></div></content><p><a href=https://www.georgeho.org/blog/probabilistic-programming/>#probabilistic-programming</a>
-<a href=https://www.georgeho.org/blog/pymc/>#pymc</a>
-<a href=https://www.georgeho.org/blog/open-source/>#open-source</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+path of a crazy person.</p></blockquote>&#160;<a href=#fnref:5 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></li></ol></div></content><p><a href=https://www.georgeho.org/blog/probabilistic-programming/>#Probabilistic-Programming</a>
+<a href=https://www.georgeho.org/blog/pymc/>#Pymc</a>
+<a href=https://www.georgeho.org/blog/open-source/>#Open-Source</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
