--- a/stat-tests-are-linear-model/index.html
+++ b/stat-tests-are-linear-model/index.html
@@ -9,8 +9,8 @@ Tests are Linear Models</em></a> from R
 to Python. Check it out on <a href=https://www.georgeho.org/tests-as-linear/>my
 blog</a>,
 <a href=https://github.com/eigenfoo/tests-as-linear>GitHub</a>, or
-<a href="https://gke.mybinder.org/v2/gh/eigenfoo/tests-as-linear/master?filepath=tests-as-linear.ipynb">Binder</a>!</p></content><p><a href=https://www.georgeho.org/blog/mathematics/>#mathematics</a>
-<a href=https://www.georgeho.org/blog/python/>#python</a>
-<a href=https://www.georgeho.org/blog/r/>#r</a>
-<a href=https://www.georgeho.org/blog/statistics/>#statistics</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+<a href="https://gke.mybinder.org/v2/gh/eigenfoo/tests-as-linear/master?filepath=tests-as-linear.ipynb">Binder</a>!</p></content><p><a href=https://www.georgeho.org/blog/mathematics/>#Mathematics</a>
+<a href=https://www.georgeho.org/blog/python/>#Python</a>
+<a href=https://www.georgeho.org/blog/r/>#R</a>
+<a href=https://www.georgeho.org/blog/statistics/>#Statistics</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form></footer></body></html>
